Allow timestamp rewrite on field - just a quick patch to make it work for our own usage